<resources>
    <string name="app_name">Razorpay payment</string>
    <string name="welcome">Welcome,\nOur Fashions App</string>
    <string name="our_fashions_app">Our Fashions App</string>
    <string name="search">Search...</string>
    <string name="todo">TODO</string>
    <string name="roller_rabb">
Roller Rabbit
</string>
    <string name="some_id">
- 1 +
</string>


    <string name="welcome_our_fashions_app">Welcome,\nOur Fashions App!</string>
    <string name="new_arrivals">New Arrivals</string>
    <string name="view_all">View All</string>
    <string name="vade_odelle_dress">vade odelle Dress</string>
    <string name="_198_00">$198.00</string>
    <string name="roller_rabbit">Roller Rabbit</string>
    <string name="my_cart">My Cart</string>
    <string name="apply">Apply</string>
    <string name="_198_00_">$198.00</string>
    <string name="total_1_item">Total (1 item) :</string>
    <string name="proceed_to_checkout">Proceed to Checkout</string>
    <string name="size">Size</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="get_a_little_lift_from_these_sam_edelman_sandals_featuring_ruched_straps_and_leather_lace_up_ties_while_a_braided_jute_sole_makes_a_fresh_statement_for_summer">Get a little lift from these Sam Edelman sandals featuring ruched straps and leather lace-up ties, while a braided jute sole makes a fresh statement for summer.</string>
    <string name="vado_odelle_dress">Vado Odelle Dress</string>
    <string name="avaliable_in_stok">Avaliable in stok</string>
    <string name="_320_review">(320 Review)</string>
    <string name="s">S</string>
    <string name="m">M</string>
    <string name="l">L</string>
    <string name="xl">XL</string>
    <string name="xll">XLL</string>
    <string name="description">Description</string>
    <string name="promo_code">Promo Code</string>
</resources>