<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffff"

    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tool_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#BCB7B7">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:src="@drawable/menu" />


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="16dp"
                android:src="@drawable/carts" />


        </androidx.appcompat.widget.Toolbar>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tool_bar"
            android:background="#9E9C9C">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/image24" />

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="448dp"
            android:layout_alignParentBottom="true"
            android:background="@drawable/bottom_corner">


            <LinearLayout
                android:id="@+id/rectangle_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"

                android:orientation="vertical">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:text="@string/roller_rabb"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/vado_odelle_dress"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

            </LinearLayout>


            <TextView
                android:layout_width="70dp"
                android:layout_height="30dp"
                android:layout_alignBottom="@+id/rectangle_5"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="25dp"

                android:layout_marginBottom="10dp"
                android:background="@drawable/rectangle_3"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:text="@string/some_id"
                android:textColor="@color/black"
                android:textSize="14sp">

            </TextView>


            <RelativeLayout
                android:id="@+id/rectangl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rectangle_5"
                android:layout_marginTop="4dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/star"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="25dp"
                    android:src="@drawable/star" />

                <TextView
                    android:id="@+id/review"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_toEndOf="@+id/star"
                    android:text="@string/_320_review" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="25dp"
                    android:text="@string/avaliable_in_stok"
                    android:textColor="@color/black"
                    android:textSize="11sp"
                    android:textStyle="bold">

                </TextView>
            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/rectangls"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rectangl"
                android:layout_marginTop="26dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:text="@string/size"
                    android:textColor="@color/black"
                    android:textSize="16sp"

                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/s"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_below="@+id/size"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/rectangle_9"
                    android:gravity="center"
                    android:text="@string/s"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/m"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_below="@+id/size"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="12dp"
                    android:layout_toEndOf="@+id/s"
                    android:background="@drawable/rectangle_9"
                    android:gravity="center"
                    android:text="@string/m"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/l"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_below="@+id/size"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="12dp"
                    android:layout_toEndOf="@+id/m"
                    android:background="@drawable/rectangle_10"
                    android:gravity="center"
                    android:text="@string/l"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/xl"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_below="@+id/size"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="12dp"
                    android:layout_toEndOf="@+id/l"
                    android:background="@drawable/rectangle_9"
                    android:gravity="center"
                    android:text="@string/xl"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/xxl"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_below="@+id/size"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="12dp"
                    android:layout_toEndOf="@+id/xl"
                    android:background="@drawable/rectangle_9"
                    android:gravity="center"
                    android:text="@string/xll"
                    android:textColor="@color/black"
                    android:textSize="14sp" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="132dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="60dp"
                    android:layout_marginEnd="24dp"
                    android:layout_toEndOf="@+id/xxl"
                    android:background="@drawable/color"
                    android:orientation="vertical">

                    <!--                    <TextView-->
                    <!--                        android:id="@+id/white"-->
                    <!--                        android:layout_width="match_parent"-->
                    <!--                        android:layout_height="match_parent"-->
                    <!--                        android:layout_gravity="center"-->
                    <!--                       -->
                    <!--                        android:gravity="center"-->
                    <!--                        android:textColor="@color/black"-->
                    <!--                        android:textSize="14sp" />-->

                    <!--                    <TextView-->
                    <!--                        android:id="@+id/black"-->
                    <!--                        android:layout_width="20dp"-->
                    <!--                        android:layout_height="20dp"-->
                    <!--                        android:layout_gravity="center"-->
                    <!--                        android:layout_marginTop="8dp"-->
                    <!--                        android:background="@drawable/rectangle_13"-->
                    <!--                        android:gravity="center"-->
                    <!--                        android:textColor="@color/black"-->
                    <!--                        android:textSize="14sp" />-->

                    <!--                    <TextView-->
                    <!--                        android:id="@+id/green"-->
                    <!--                        android:layout_width="20dp"-->
                    <!--                        android:layout_height="20dp"-->
                    <!--                        android:layout_gravity="center"-->
                    <!--                        android:layout_marginTop="8dp"-->
                    <!--                        android:background="@drawable/rectangle_11"-->
                    <!--                        android:gravity="center"-->
                    <!--                        android:textColor="@color/white"-->
                    <!--                        android:textSize="14sp" />-->

                    <!--                    <TextView-->
                    <!--                        android:id="@+id/yellow"-->
                    <!--                        android:layout_width="20dp"-->
                    <!--                        android:layout_height="20dp"-->
                    <!--                        android:layout_gravity="center"-->
                    <!--                        android:layout_marginTop="8dp"-->
                    <!--                        android:background="@drawable/rectangle_12"-->
                    <!--                        android:gravity="center"-->
                    <!--                        android:textColor="@color/black"-->
                    <!--                        android:textSize="14sp" />-->

                </LinearLayout>


            </RelativeLayout>


            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rectangls"
                android:layout_marginStart="25dp"
                android:text="@string/description"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold">

            </TextView>

            <TextView
                android:id="@+id/get"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/description"
                android:layout_marginStart="25dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="25dp"
                android:text="@string/get_a_little_lift_from_these_sam_edelman_sandals_featuring_ruched_straps_and_leather_lace_up_ties_while_a_braided_jute_sole_makes_a_fresh_statement_for_summer"
                android:textColor="#666666"
                android:textSize="11sp">

            </TextView>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/get"
                android:layout_marginTop="30dp">


                <LinearLayout
                    android:id="@+id/rectanglss"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16sp"
                        android:text="@string/roller_rabb"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:textStyle="bold" />


                    <TextView
                        android:id="@+id/time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16sp"
                        android:text="@string/_198_00"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <RelativeLayout
                    android:id="@+id/item2"
                    android:layout_width="200dp"
                    android:layout_height="50dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="50dp"
                    android:layout_marginEnd="25dp"
                    android:layout_toEndOf="@+id/rectanglss"
                    android:background="@drawable/rectangle_15"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="30dp"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="1dp"
                        android:gravity="center"
                        android:src="@drawable/icon__1_"

                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="70dp"
                        android:gravity="center_vertical"
                        android:text="@string/add_to_cart"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textStyle="bold">

                    </TextView>

                </RelativeLayout>

            </RelativeLayout>


        </RelativeLayout>


    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>

</layout>