<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".MainActivity">


        <RelativeLayout
            android:id="@+id/my_cart_1"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:background="#FFFFFF">

            <ImageView
                android:id="@+id/arrow"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="25dp"
                android:src="@drawable/arrow" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="25dp"
                android:background="@drawable/rectangle_8"
                android:src="@drawable/carts" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/my_cart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/my_cart_1"
            android:layout_marginStart="25dp"
            android:layout_marginTop="12dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/my_cart"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="18sp" />

        </LinearLayout>


        <RelativeLayout
            android:id="@+id/rectangle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/my_cart"
            android:layout_alignParentStart="true"
            android:layout_marginStart="25dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="25dp"
            android:background="@drawable/rectangle_5"
            android:orientation="horizontal">


            <LinearLayout
                android:id="@+id/rectangle_4"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_centerVertical="true"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="16dp"
                android:background="@drawable/image_new" />

            <LinearLayout
                android:id="@+id/rectangle_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@+id/rectangle_4"
                android:orientation="vertical">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16sp"
                    android:textStyle="bold"
                    android:text="@string/roller_rabb"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16sp"
                    android:fontFamily="sans-serif"
                    android:text="Vado Odelle Dress"
                    android:textColor="@color/black"
                    android:textSize="14sp" />


                <TextView
                    android:id="@+id/time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16sp"
                    android:layout_marginTop="18dp"
                    android:text="@string/_198_00"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

            </LinearLayout>


            <TextView
                android:layout_width="70dp"
                android:layout_height="30dp"
                android:layout_alignBottom="@+id/rectangle_5"
                android:layout_alignParentEnd="true"
                android:layout_gravity="bottom"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="25dp"
                android:layout_marginBottom="1dp"
                android:background="@drawable/rectangle_3"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:text="@string/some_id"
                android:textColor="@color/black"
                android:textSize="14sp">

            </TextView>

        </RelativeLayout>

        <View
            android:id="@+id/line_1"
            android:layout_width="375dp"
            android:layout_height="0dp"
            android:layout_below="@+id/rectangle"
            android:layout_alignParentStart="true"
            android:layout_marginTop="55dp" />

        <RelativeLayout
            android:id="@+id/promo"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/line_1"
            android:layout_alignParentStart="true"
            android:layout_marginStart="25dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="25dp"
            android:background="@drawable/rectangle_6"
            android:orientation="horizontal">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:gravity="center"
                android:text="@string/roller_rabb"
                android:textColor="#AAAAAA"
                android:textSize="13sp" />

            <TextView
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:background="@drawable/rectangle_7"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:text="@string/apply"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </RelativeLayout>


        <View
            android:id="@+id/line_2"
            android:layout_width="375dp"
            android:layout_height="0dp"
            android:layout_below="@+id/promo"
            android:layout_alignParentStart="true"
            android:layout_marginTop="16dp" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="154dp"

            android:layout_alignParentBottom="true"


            android:background="@drawable/bottom_corner">

            <RelativeLayout
                android:id="@+id/item"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_alignParentStart="true"
                android:layout_marginStart="25dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="25dp"
                android:orientation="horizontal">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:layout_marginStart="16dp"
                    android:gravity="center"
                    android:text="@string/total_1_item"
                    android:textColor="#AAAAAA"
                    android:textSize="13sp" />

                <TextView
                    android:layout_width="60dp"
                    android:layout_height="30dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="10dp"
                    android:gravity="center"
                    android:text="@string/_198_00_"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/item2"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/item"
                android:layout_alignParentStart="true"
                android:layout_marginStart="25dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="25dp"
                android:background="@drawable/rectangle_7"
                android:orientation="horizontal">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:layout_marginStart="16dp"
                    android:gravity="center"
                    android:text="@string/proceed_to_checkout"
                    android:textColor="#FFFFFF"
                    android:textSize="13sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="30dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="1dp"
                    android:gravity="center"
                    android:src="@drawable/arrow__1_"

                    />
            </RelativeLayout>


        </RelativeLayout>


    </RelativeLayout>
</layout>